Ensure hover effects not present on mobile

--- a/assets/css/05_component-archive.css
+++ b/assets/css/05_component-archive.css
@@ -47,9 +47,11 @@
     }
   }
 
-  &:hover {
-    h3.underline {
-      --length: 100%;
+  @media (hover: hover) {
+    &:hover {
+      h3.underline {
+        --length: 100%;
+      }
     }
   }
 }
