--- a/assets/css/05_component-avatar.css
+++ b/assets/css/05_component-avatar.css
@@ -14,8 +14,10 @@
   }
 }
 
-.avatar--spin:hover {
-  animation: spin-once 400ms linear;
+@media (hover: hover) {
+  .avatar--spin:hover {
+    animation: spin-once 400ms linear;
+  }
 }
 
 @keyframes spin-once {
