--- a/assets/css/05_component-posts.css
+++ b/assets/css/05_component-posts.css
@@ -28,9 +28,11 @@
     }
   }
 
-  &:hover {
-    h2.underline {
-      --length: 100%;
+  @media (hover: hover) {
+    &:hover {
+      h2.underline {
+        --length: 100%;
+      }
     }
   }
 
@@ -46,8 +48,10 @@
   transition: transform 300ms ease-in-out;
   border-radius: var(--border-radius-2);
 
-  &:hover {
-    transform: scale(1.03);
+  @media (hover: hover) {
+    &:hover {
+      transform: scale(1.03);
+    }
   }
 }
 
