--- a/assets/css/05_component-projects.css
+++ b/assets/css/05_component-projects.css
@@ -15,15 +15,17 @@
   position: relative;
   transition: transform 250ms ease-in-out;
 
-  &:hover {
-    transform: scale(1.03);
-
-    .project__title.underline {
-      --length: 100%;
-    }
-
-    .project__image {
+  @media (hover: hover) {
+    &:hover {
       transform: scale(1.03);
+
+      .project__title.underline {
+        --length: 100%;
+      }
+
+      .project__image {
+        transform: scale(1.03);
+      }
     }
   }
 }
